--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <table>
         <tr>
             <td>
-                <img src="./ko.png" alt="" id="kep" onclick="piros()">
+                <img src="./ko.png" alt="" id="kok" onclick="ko()">
             </td>
             <td>
-                <img src="./papir.png" alt="">
+                <img src="./papir.png" alt="" id="papirk" onclick="papir()">
 
             </td>
             <td>
-                <img src="./ollo.png" alt="">
+                <img src="./ollo.png" alt="" id="ollok" onclick="ollo()">
             </td>
         </tr>
     </table>
@@ -29,13 +29,15 @@
     
     
 
-    <h2>Gép választása</h2>
-
+    <h2 onclick="gep()">Gép választása</h2>
+    <p id="gepv"><img src="" alt="" id="kepimg"></p>
     <h1>Eredmény:</h1>
     <p>Te pontod</p>
+    <p id="enpontok"></p>
 
 
     <p>Gép pontja</p>
+    <p id="geppontok"></p>
 
 <script src="./index.js"></script>
 </body>
