--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
     <h2 onclick="gep()">Gép választása</h2>
     <p id="gepv"><img src="" alt="" id="kepimg"></p>
-    <h1>Eredmény:</h1>
+    <h1 id="eredmeny">Eredmény:</h1>
     <p>Te pontod</p>
-    <p id="enpontok"></p>
+    <p id="enpontok">0</p>
 
 
     <p>Gép pontja</p>
-    <p id="geppontok"></p>
+    <p id="geppontok">0</p>
 
 <script src="./index.js"></script>
 </body>
